--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="author" content="RecoveryCashback.com" />
     <meta property="og:image" content="/logo.svg" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <style>
+      :root { font-family: 'Inter', sans-serif; }
+      @supports (font-variation-settings: normal) {
+        :root { font-family: 'Inter var', sans-serif; }
+      }
+    </style>
   </head>
 
   <body>
